--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240425154213">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240425164521">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -265,20 +265,20 @@
 							</div>
 							<div class="item-tokenomics__body">
 								<div class="item-tokenomics__row item-tokenomics__row--highlight">
-									<div>Token Name</div>
-									<div>$BOO</div>
+									<div class="item-tokenomics__first-floor">Token Name</div>
+									<div class="item-tokenomics__second-floor">$BOO</div>
 								</div>
 								<div class="item-tokenomics__row">
-									<div>Network</div>
-									<div>TRON</div>
+									<div class="item-tokenomics__first-floor">Network</div>
+									<div class="item-tokenomics__second-floor">TRON</div>
 								</div>
 								<div class="item-tokenomics__row">
-									<div>Tax Fees</div>
-									<div>0/0</div>
+									<div class="item-tokenomics__first-floor">Tax Fees</div>
+									<div class="item-tokenomics__second-floor">0/0</div>
 								</div>
 								<div class="item-tokenomics__row">
-									<div>Slippage</div>
-									<div>0.5%</div>
+									<div class="item-tokenomics__first-floor">Slippage</div>
+									<div class="item-tokenomics__second-floor">0.5%</div>
 								</div>
 							</div>
 						</article>
@@ -371,7 +371,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240425154213"></script>
+	<script src="js/app.min.js?_v=20240425164521"></script>
 </body>
 
 </html>
