--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240426105214">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240426115312">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -109,8 +109,8 @@
 						<img data-prlx class="what__image ibg" src="img/news.webp" alt="Image">
 					</div>
 					<div class="what__body">
-						<div class="what__label button button--no-event">
-							<h2>What is $BOO?</h2>
+						<div data-watch class="what__label button button--no-event">
+							<h2 class="what__title">What is $BOO?</h2>
 							<div class="what__decor">
 								<img class="what__image-decor ibg" src="img/bone-1.webp" alt="Image">
 								<!-- <img
@@ -222,7 +222,7 @@
 									<img data-prlx-mouse class="ibg" src="img/4.webp" alt="Image">
 								</div>
 							</article>
-							<img data-watch class="lines ibg ibg--contain" src="img/lines.svg" alt="Image">
+							<img data-watch class="lines ibg ibg--contain" src="img/lines.webp" alt="Image">
 						</div>
 					</div>
 				</div>
@@ -372,7 +372,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240426105214"></script>
+	<script src="js/app.min.js?_v=20240426115312"></script>
 </body>
 
 </html>
