--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								Welcome to <br>
 								<span class="hero__highligh">Boo.</span>
 							</h1>
-							<div class="hero__title-bone ibg">
+							<div class="hero__title-bone">
 								<img class="hero__bone-decor ibg ibg--contain ibg--top" src="img/bone.webp" alt="bone image">
 							</div>
 						</div>
