--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240426121146">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240427120747">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -85,19 +85,19 @@
 					<div class="social__container">
 						<ul class="social__list">
 							<li data-watch class="social__item">
-								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/1.svg" alt="Image"></a>
+								<a href="#"><img class="social__link ibg" src="img/1.svg" alt="Image"></a>
 							</li>
 							<li data-watch class="social__item">
-								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/x.webp" alt="Image"></a>
+								<a href="#"><img class="social__link ibg" src="img/x.webp" alt="Image"></a>
 							</li>
 							<li data-watch class="social__item">
-								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/3.svg" alt="Image"></a>
+								<a href="#"><img class="social__link ibg" src="img/3.svg" alt="Image"></a>
 							</li>
 							<li data-watch class="social__item">
-								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/4.svg" alt="Image"></a>
+								<a href="#"><img class="social__link ibg" src="img/4.svg" alt="Image"></a>
 							</li>
 							<li data-watch class="social__item">
-								<a href="#"><img data-prlx-mouse class="social__link ibg" src="img/5.webp" alt="Image"></a>
+								<a href="#"><img class="social__link ibg" src="img/5.webp" alt="Image"></a>
 							</li>
 						</ul>
 					</div>
@@ -354,14 +354,11 @@
 					</ul>
 				</div>
 			</div>
-			<!-- <div class="footer__copy">
-      Made by
-      <a class="footer__copy-link" href="https://ev-klzn.com">ev-klzn</a>
-      @2024
-    </div> -->
+
 			<div class="footer__container">
 				<div class="footer__copy">
-					Made by © 2024 Boo • All Rights Reserved @2024
+					Made by
+					<a class="footer__copy-link" href="https://ev-klzn.com">ev-klzn</a> @2024
 				</div>
 				<div class="footer__img">
 					<img class="footer__image-dog ibg ibg--contain" src="img/dog.webp" alt="Image">
@@ -372,7 +369,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240426121146"></script>
+	<script src="js/app.min.js?_v=20240427120747"></script>
 </body>
 
 </html>
