--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240427123503">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240427125216">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -358,7 +358,7 @@
 			<div class="footer__container">
 				<div class="footer__copy">
 					Made by
-					<a class="footer__copy-link" href="https://ev-klzn.com">ev-klzn</a> @2024
+					<a target="_blank" class="footer__copy-link" href="https://ev-klzn.com">ev-klzn</a> @2024
 				</div>
 				<div class="footer__img">
 					<img class="footer__image-dog ibg ibg--contain" src="img/dog.webp" alt="Image">
@@ -369,7 +369,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20240427123503"></script>
+	<script src="js/app.min.js?_v=20240427125216"></script>
 </body>
 
 </html>
